--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "db-converter",
+  "name": "exceler",
   "version": "1.0.0",
   "description": "",
-  "main": "db-converter.js",
+  "main": "index.js",
   "watch": {
     "test": "test/**/*.js"
   },
@@ -14,11 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fs-extra": "^3.0.1",
     "sanitize-filename": "^1.6.1"
   },
   "devDependencies": {
     "excel-as-json": "^2.0.1",
+    "fs-extra": "^3.0.1",
+    "json2xls": "^0.1.2",
     "npm-watch": "^0.1.9",
     "tap-prettify": "0.0.2",
     "tape": "^4.6.3",
