Reorganize package.json

--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "watch": "npm-watch"
   },
   "keywords": [],
-  "author": "",
+  "author": "Giovanni Francischelli",
   "license": "ISC",
   "dependencies": {
     "xlso": "^1.0.2",
     "xlsx": "^0.10.3",
+    "fs-extra": "^3.0.1",
+    "json2xls": "^0.1.2"
   },
   "devDependencies": {
-    "excel-as-json": "^2.0.1",
     "npm-watch": "^0.1.9",
     "tap-prettify": "0.0.2",
     "tape": "^4.6.3",
